--- a/House_Price_Prediction_v1.ipynb
+++ b/House_Price_Prediction_v1.ipynb
@@ -1323,427 +1323,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Id</th>\n",
-       "      <th>SalePrice</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1461</td>\n",
-       "      <td>118750.320098</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1462</td>\n",
-       "      <td>154573.147591</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>1463</td>\n",
-       "      <td>178348.981084</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>1464</td>\n",
-       "      <td>193365.913566</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>1465</td>\n",
-       "      <td>189740.249516</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>1466</td>\n",
-       "      <td>171885.553885</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>1467</td>\n",
-       "      <td>181790.259736</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>1468</td>\n",
-       "      <td>163427.517004</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>1469</td>\n",
-       "      <td>189001.784912</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>1470</td>\n",
-       "      <td>123092.090870</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>1471</td>\n",
-       "      <td>183615.604516</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11</th>\n",
-       "      <td>1472</td>\n",
-       "      <td>97076.054102</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12</th>\n",
-       "      <td>1473</td>\n",
-       "      <td>96164.614876</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13</th>\n",
-       "      <td>1474</td>\n",
-       "      <td>147797.993667</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14</th>\n",
-       "      <td>1475</td>\n",
-       "      <td>120743.562878</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>15</th>\n",
-       "      <td>1476</td>\n",
-       "      <td>362761.432632</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>16</th>\n",
-       "      <td>1477</td>\n",
-       "      <td>250870.611720</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>17</th>\n",
-       "      <td>1478</td>\n",
-       "      <td>292067.780420</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>18</th>\n",
-       "      <td>1479</td>\n",
-       "      <td>283871.661135</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>19</th>\n",
-       "      <td>1480</td>\n",
-       "      <td>490165.876051</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>20</th>\n",
-       "      <td>1481</td>\n",
-       "      <td>332776.980193</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>21</th>\n",
-       "      <td>1482</td>\n",
-       "      <td>215460.249014</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>22</th>\n",
-       "      <td>1483</td>\n",
-       "      <td>170208.232183</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>23</th>\n",
-       "      <td>1484</td>\n",
-       "      <td>167376.131463</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>24</th>\n",
-       "      <td>1485</td>\n",
-       "      <td>187780.869107</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>25</th>\n",
-       "      <td>1486</td>\n",
-       "      <td>191863.277153</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>26</th>\n",
-       "      <td>1487</td>\n",
-       "      <td>351740.074425</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>27</th>\n",
-       "      <td>1488</td>\n",
-       "      <td>236545.701080</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>28</th>\n",
-       "      <td>1489</td>\n",
-       "      <td>198553.315589</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>29</th>\n",
-       "      <td>1490</td>\n",
-       "      <td>224971.864722</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1429</th>\n",
-       "      <td>2890</td>\n",
-       "      <td>84000.159377</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1430</th>\n",
-       "      <td>2891</td>\n",
-       "      <td>132699.291109</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1431</th>\n",
-       "      <td>2892</td>\n",
-       "      <td>46603.295383</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1432</th>\n",
-       "      <td>2893</td>\n",
-       "      <td>75232.738391</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1433</th>\n",
-       "      <td>2894</td>\n",
-       "      <td>54563.085754</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1434</th>\n",
-       "      <td>2895</td>\n",
-       "      <td>311409.514580</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1435</th>\n",
-       "      <td>2896</td>\n",
-       "      <td>274767.622310</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1436</th>\n",
-       "      <td>2897</td>\n",
-       "      <td>201413.755929</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1437</th>\n",
-       "      <td>2898</td>\n",
-       "      <td>147273.552179</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1438</th>\n",
-       "      <td>2899</td>\n",
-       "      <td>214538.457801</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1439</th>\n",
-       "      <td>2900</td>\n",
-       "      <td>160190.127498</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1440</th>\n",
-       "      <td>2901</td>\n",
-       "      <td>203521.115814</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1441</th>\n",
-       "      <td>2902</td>\n",
-       "      <td>176338.308773</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1442</th>\n",
-       "      <td>2903</td>\n",
-       "      <td>333536.200597</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1443</th>\n",
-       "      <td>2904</td>\n",
-       "      <td>350754.002787</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1444</th>\n",
-       "      <td>2905</td>\n",
-       "      <td>82285.573824</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1445</th>\n",
-       "      <td>2906</td>\n",
-       "      <td>201719.159075</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1446</th>\n",
-       "      <td>2907</td>\n",
-       "      <td>111264.168678</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1447</th>\n",
-       "      <td>2908</td>\n",
-       "      <td>135999.946456</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1448</th>\n",
-       "      <td>2909</td>\n",
-       "      <td>149211.524754</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1449</th>\n",
-       "      <td>2910</td>\n",
-       "      <td>82565.461933</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1450</th>\n",
-       "      <td>2911</td>\n",
-       "      <td>83224.229793</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1451</th>\n",
-       "      <td>2912</td>\n",
-       "      <td>147013.344747</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1452</th>\n",
-       "      <td>2913</td>\n",
-       "      <td>83005.641477</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1453</th>\n",
-       "      <td>2914</td>\n",
-       "      <td>76413.108493</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1454</th>\n",
-       "      <td>2915</td>\n",
-       "      <td>81459.795933</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1455</th>\n",
-       "      <td>2916</td>\n",
-       "      <td>84153.644059</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1456</th>\n",
-       "      <td>2917</td>\n",
-       "      <td>150774.410437</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1457</th>\n",
-       "      <td>2918</td>\n",
-       "      <td>112683.361732</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1458</th>\n",
-       "      <td>2919</td>\n",
-       "      <td>222231.698948</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>1459 rows × 2 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "        Id      SalePrice\n",
-       "0     1461  118750.320098\n",
-       "1     1462  154573.147591\n",
-       "2     1463  178348.981084\n",
-       "3     1464  193365.913566\n",
-       "4     1465  189740.249516\n",
-       "5     1466  171885.553885\n",
-       "6     1467  181790.259736\n",
-       "7     1468  163427.517004\n",
-       "8     1469  189001.784912\n",
-       "9     1470  123092.090870\n",
-       "10    1471  183615.604516\n",
-       "11    1472   97076.054102\n",
-       "12    1473   96164.614876\n",
-       "13    1474  147797.993667\n",
-       "14    1475  120743.562878\n",
-       "15    1476  362761.432632\n",
-       "16    1477  250870.611720\n",
-       "17    1478  292067.780420\n",
-       "18    1479  283871.661135\n",
-       "19    1480  490165.876051\n",
-       "20    1481  332776.980193\n",
-       "21    1482  215460.249014\n",
-       "22    1483  170208.232183\n",
-       "23    1484  167376.131463\n",
-       "24    1485  187780.869107\n",
-       "25    1486  191863.277153\n",
-       "26    1487  351740.074425\n",
-       "27    1488  236545.701080\n",
-       "28    1489  198553.315589\n",
-       "29    1490  224971.864722\n",
-       "...    ...            ...\n",
-       "1429  2890   84000.159377\n",
-       "1430  2891  132699.291109\n",
-       "1431  2892   46603.295383\n",
-       "1432  2893   75232.738391\n",
-       "1433  2894   54563.085754\n",
-       "1434  2895  311409.514580\n",
-       "1435  2896  274767.622310\n",
-       "1436  2897  201413.755929\n",
-       "1437  2898  147273.552179\n",
-       "1438  2899  214538.457801\n",
-       "1439  2900  160190.127498\n",
-       "1440  2901  203521.115814\n",
-       "1441  2902  176338.308773\n",
-       "1442  2903  333536.200597\n",
-       "1443  2904  350754.002787\n",
-       "1444  2905   82285.573824\n",
-       "1445  2906  201719.159075\n",
-       "1446  2907  111264.168678\n",
-       "1447  2908  135999.946456\n",
-       "1448  2909  149211.524754\n",
-       "1449  2910   82565.461933\n",
-       "1450  2911   83224.229793\n",
-       "1451  2912  147013.344747\n",
-       "1452  2913   83005.641477\n",
-       "1453  2914   76413.108493\n",
-       "1454  2915   81459.795933\n",
-       "1455  2916   84153.644059\n",
-       "1456  2917  150774.410437\n",
-       "1457  2918  112683.361732\n",
-       "1458  2919  222231.698948\n",
-       "\n",
-       "[1459 rows x 2 columns]"
-      ]
-     },
-     "execution_count": 40,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "submission_df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "submission_df.to_csv('submission.csv')"
+   ]
   }
  ],
  "metadata": {
