--- a/house_price_prediction_v2.ipynb
+++ b/house_price_prediction_v2.ipynb
@@ -21,7 +21,7 @@
     "# Introduction\n",
     "![](https://i.ytimg.com/vi/LvfbopVq-WE/maxresdefault.jpg)\n",
     "\n",
-    "#### This is my second version ***House Price Prediction*** Model for the Kaggle Competition. In this version, I improve methods for processing missing value more accurately, use Ridge, LGBM, XGB, and Stacking CV Regressor to build machie learning models, and add blended models. Since some contents are repeated, I will just breifly describe the dataset at the beginning.\n"
+    "#### This is my second version ***House Price Prediction*** Model for the Kaggle Competition. In this version, I improve methods for processing missing value more accurately, use Ridge, Lasso, LGBM, XGB, and Stacking CV Regressor to build machie learning models, and add blended models. Since some contents are repeated, I will just breifly describe the dataset at the beginning.\n"
    ]
   },
   {
@@ -1885,16 +1885,7 @@
     "<div>\n",
     "    \n",
     " ### Ridge:\n",
-    "Ridge regression adds penalty equivalent to the square of the magnitude of the coefficients. This penalty is added to the least square loss function above and looks like this...\n",
-    "\n",
-    "### $$ \\text{minimize:}\\; RSS+Ridge = \\sum_{i=1}^n \\left(y_i - \\left(\\beta_0 + \\sum_{j=1}^p\\beta_j x_j\\right)\\right)^2 + \\lambda_2\\sum_{j=1}^p \\beta_j^2$$\n",
-    "\n",
-    "Here, \n",
-    "* $\\lambda_2$ is constant; a regularization parameter. It is also known as $\\alpha$. The higher the value of this constant the more the impact in the loss function. \n",
-    "    * When $\\lambda_2$ is 0, the loss funciton becomes same as simple linear regression. \n",
-    "    * When $\\lambda_2$ is $\\infty$, the coefficients become 0\n",
-    "    * When $\\lambda_2$ is between  0 and $\\infty$(0<$\\lambda_2$<$\\infty$), The $\\lambda_2$ parameter will decide the miagnitude given to the coefficients. The coefficients will be somewhere between 0 and ones for simple linear regression. \n",
-    "* $\\sum_{j=1}^p \\beta_j^2$, is the squared sum of all coefficients. \n"
+    "Ridge regression adds penalty equivalent to the square of the magnitude of the coefficients. This penalty is added to the least square loss function above and looks like this..."
    ]
   },
   {
@@ -2014,13 +2005,7 @@
    },
    "source": [
     "### Lasso:\n",
-    "Lasso adds penalty equivalent to the absolute value of the sum of coefficients. This penalty is added to the least square loss function and replaces the squared sum of coefficients from Ridge. \n",
-    "\n",
-    "## $$ \\text{minimize:}\\; RSS + Lasso = \\sum_{i=1}^n \\left(y_i - \\left(\\beta_0 + \\sum_{j=1}^p\\beta_j x_j\\right)\\right)^2 + \\lambda_1\\sum_{j=1}^p |\\beta_j|$$\n",
-    "\n",
-    "Here, \n",
-    "* $\\lambda_2$ is a constant similar to the Ridge function. \n",
-    "* $\\sum_{j=1}^p |\\beta_j|$ is the absolute sum of the coefficients."
+    "Lasso adds penalty equivalent to the absolute value of the sum of coefficients. This penalty is added to the least square loss function and replaces the squared sum of coefficients from Ridge. \n"
    ]
   },
   {
@@ -2136,11 +2121,7 @@
    },
    "source": [
     "### Elastic Net: \n",
-    "Elastic Net is the combination of both Ridge and Lasso. It adds both the sum of squared coefficients and the absolute sum of the coefficients with the ordinary least square function. Let's look at the function. \n",
-    "\n",
-    "### $$ \\text{minimize:}\\; RSS + Ridge + Lasso = \\sum_{i=1}^n \\left(y_i - \\left(\\beta_0 + \\sum_{j=1}^p\\beta_j x_j\\right)\\right)^2 + \\lambda_1\\sum_{j=1}^p |\\beta_j| + \\lambda_2\\sum_{j=1}^p \\beta_j^2$$\n",
-    "\n",
-    "This equation is pretty self-explanatory if you have been following this kernel so far."
+    "Elastic Net is the combination of both Ridge and Lasso. It adds both the sum of squared coefficients and the absolute sum of the coefficients with the ordinary least square function. Let's look at the function. \n"
    ]
   },
   {
